--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_blue: ^0.8.0
   provider: ^6.0.2
+  flutter_reactive_ble: ^5.0.2
+  location_permissions: ^4.0.1
 
 dev_dependencies:
   flutter_test:
