--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,14 @@ dependencies:
   provider: ^6.0.2
   flutter_reactive_ble: ^5.0.2
   location_permissions: ^4.0.1
+  flutter_secure_storage: ^8.0.0
+  dio: ^5.1.1
+  url_launcher: ^6.1.10
+  lottie: ^2.3.2
+  fluttertoast: ^8.2.1
+  shimmer: ^2.0.0
+  flutter_riverpod: ^2.3.4
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
@@ -30,9 +38,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
