--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,6 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  flutter_blue: ^0.8.0
-  provider: ^6.0.2
   flutter_reactive_ble: ^5.0.2
   location_permissions: ^4.0.1
   flutter_secure_storage: ^8.0.0
@@ -25,6 +23,7 @@ dependencies:
   shimmer: ^2.0.0
   flutter_riverpod: ^2.3.4
   google_fonts: ^4.0.3
+  animated_theme_switcher: ^2.0.8
 
 dev_dependencies:
   flutter_test:
