--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter_riverpod: ^2.3.4
   google_fonts: ^4.0.3
   animated_theme_switcher: ^2.0.8
+  syncfusion_flutter_charts: ^21.2.3
+  font_awesome_flutter: ^10.4.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +42,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
