--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   syncfusion_flutter_charts: ^21.2.3
   font_awesome_flutter: ^10.4.0
   intl: ^0.18.1
+  select_dialog: ^2.0.0
 
 dev_dependencies:
   flutter_test:
