--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   select_dialog: ^2.0.0
   battery_plus: ^4.0.0
   permission_handler: ^10.2.0
+  wakelock: ^0.6.2
+  share_plus: ^6.3.4
+  screenshot: ^2.1.0
 
 dev_dependencies:
   flutter_test:
