--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
    <application
-        android:label="bluerandom"
+        android:label="Bluerandom"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
